<resources>
    <string name="app_name">Calculadora2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="igual">=</string>
    <string name="clear">C</string>
    <string name="porcentaje">%</string>
    <string name="dividir">/</string>
    <string name="producto">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="cuatro">4</string>
    <string name="tres">3</string>
    <string name="dos">2</string>
    <string name="uno">1</string>
    <string name="cero">0</string>
    <string name="punto">.</string>
</resources>

